interpreter/parser/Pargramatyka.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.19.5 from Pargramatyka.y
-----------------------------------------------------------------------------


-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_ident                                   (1)
	Integer -> L_integ                                 (2)
	Double -> L_doubl                                  (3)
	String -> L_quoted                                 (4)
	Program -> ListDef ListStmt                        (5)
	ListIdent ->                                       (6)
	ListIdent -> Ident                                 (7)
	ListIdent -> Ident ',' ListIdent                   (8)
	ComplexCoord -> Integer                            (9)
	ComplexCoord -> Double                             (10)
	Const -> ComplexCoord                              (11)
	Const -> '(' ComplexCoord ',' ComplexCoord ')'     (12)
	Const -> 'true'                                    (13)
	Const -> 'false'                                   (14)
	Const -> String                                    (15)
	ListExpr ->                                        (16)
	ListExpr -> Expr                                   (17)
	ListExpr -> Expr ',' ListExpr                      (18)
	Expr11 -> Ident                                    (19)
	Expr11 -> Ident '(' ListExpr ')'                   (20)
	Expr11 -> Ident '[' ListExpr ']'                   (21)
	Expr11 -> Ident '[' Expr ':' Expr ']'              (22)
	Expr11 -> Ident '[' Expr '::' Expr ']'             (23)
	Expr11 -> Ident '[' Expr '..' Expr ']'             (24)
	Expr11 -> Ident '[' Expr '\\' Expr ']'             (25)
	Expr11 -> Const                                    (26)
	Expr11 -> '(' Expr ')'                             (27)
	Expr -> Expr '==' Expr1                            (28)
	Expr -> Expr '!=' Expr1                            (29)
	Expr -> Expr1                                      (30)
	Expr1 -> Expr1 '<' Expr2                           (31)
	Expr1 -> Expr1 '<=' Expr2                          (32)
	Expr1 -> Expr1 '>' Expr2                           (33)
	Expr1 -> Expr1 '>=' Expr2                          (34)
	Expr1 -> Expr2                                     (35)
	Expr2 -> Expr2 'or' Expr3                          (36)
	Expr2 -> Expr3                                     (37)
	Expr3 -> Expr3 'and' Expr4                         (38)
	Expr3 -> Expr4                                     (39)
	Expr4 -> Expr4 'xor' Expr5                         (40)
	Expr4 -> Expr5                                     (41)
	Expr5 -> 'not' Expr6                               (42)
	Expr5 -> Expr6                                     (43)
	Expr6 -> Expr6 '+' Expr7                           (44)
	Expr6 -> Expr6 '-' Expr7                           (45)
	Expr6 -> Expr6 '&' Expr7                           (46)
	Expr6 -> Expr7                                     (47)
	Expr7 -> Expr7 '*' Expr8                           (48)
	Expr7 -> Expr7 '/' Expr8                           (49)
	Expr7 -> Expr7 'mod' Expr8                         (50)
	Expr7 -> Expr8                                     (51)
	Expr8 -> Expr8 '^' Expr9                           (52)
	Expr8 -> Expr9                                     (53)
	Expr9 -> '-' Expr10                                (54)
	Expr9 -> Expr10                                    (55)
	Expr10 -> '#' Expr11                               (56)
	Expr10 -> Expr11                                   (57)
	Option -> Ident                                    (58)
	ListStmt ->                                        (59)
	ListStmt -> ListStmt Stmt                          (60)
	Stmt -> '!' Ident '(' ListExpr ')' ';'             (61)
	Stmt -> Expr ';'                                   (62)
	Stmt -> Expr '=' Expr ';'                          (63)
	Stmt -> Expr FanoutSugarOp Expr ';'                (64)
	Stmt -> 'for' Ident '=' Expr 'to' Expr Block       (65)
	Stmt -> 'for' Ident '=' Expr 'to' Expr 'step' Expr Block   (66)
	Stmt -> 'while' Expr Block                         (67)
	Stmt -> Block 'until' Expr ';'                     (68)
	Stmt -> 'if' Expr Block                            (69)
	Stmt -> 'if' Expr Block 'else' Block               (70)
	Stmt -> 'return' Expr ';'                          (71)
	Stmt -> 'input' Expr Ident ';'                     (72)
	Stmt -> 'input' Ident ';'                          (73)
	Stmt -> 'print' ListExpr ';'                       (74)
	Stmt -> 'exit' Expr ';'                            (75)
	Stmt -> 'measure' Expr ';'                         (76)
	Stmt -> 'measure' Expr ',' Ident ';'               (77)
	Stmt -> 'reset' ';'                                (78)
	Stmt -> 'list' ListIdent ';'                       (79)
	Stmt -> 'dump' Expr ';'                            (80)
	Stmt -> 'dump' ';'                                 (81)
	Stmt -> 'load' Expr ';'                            (82)
	Stmt -> 'load' ';'                                 (83)
	Stmt -> 'save' Expr ';'                            (84)
	Stmt -> 'save' ';'                                 (85)
	Stmt -> 'shell' ';'                                (86)
	Stmt -> 'set' Option Expr ';'                      (87)
	Stmt -> ';'                                        (88)
	FanoutSugarOp -> '->'                              (89)
	FanoutSugarOp -> '<-'                              (90)
	FanoutSugarOp -> '<->'                             (91)
	Type -> ST                                         (92)
	Type -> ST 'string'                                (93)
	Type -> ST 'vector'                                (94)
	Type -> ST 'matrix'                                (95)
	Type -> ST 'tensor' Integer                        (96)
	ST -> 'boolean'                                    (97)
	ST -> 'int'                                        (98)
	ST -> 'real'                                       (99)
	ST -> 'complex'                                    (100)
	ST -> 'qureg'                                      (101)
	ST -> 'quvoid'                                     (102)
	ST -> 'quconst'                                    (103)
	ST -> 'quscratch'                                  (104)
	ST -> 'qucond'                                     (105)
	ConstDef -> 'const' Ident '=' Expr                 (106)
	ConstDef -> Type Ident '=' 'cond'                  (107)
	VarDef -> Type Ident                               (108)
	VarDef -> Type Ident '=' Expr                      (109)
	VarDef -> Type Ident '[' Expr ']'                  (110)
	ListArgDef ->                                      (111)
	ListArgDef -> ArgDef                               (112)
	ListArgDef -> ArgDef ',' ListArgDef                (113)
	ArgDef -> Type Ident                               (114)
	ListConstOrVar ->                                  (115)
	ListConstOrVar -> ListConstOrVar ConstOrVar ';'    (116)
	ConstOrVar -> ConstDef                             (117)
	ConstOrVar -> VarDef                               (118)
	Body -> '{' ListConstOrVar ListStmt '}'            (119)
	ListDef ->                                         (120)
	ListDef -> ListDef Def                             (121)
	Def -> ConstDef ';'                                (122)
	Def -> VarDef ';'                                  (123)
	Def -> Type Ident '(' ListArgDef ')' Body          (124)
	Def -> 'procedure' Ident '(' ListArgDef ')' Body   (125)
	Def -> 'operator' Ident '(' ListArgDef ')' Body    (126)
	Def -> 'qufunct' 'operator' Ident '(' ListArgDef ')' Body   (127)
	Def -> 'cond' 'operator' Ident '(' ListArgDef ')' Body   (128)
	Def -> 'qufunct' Ident '(' ListArgDef ')' Body     (129)
	Def -> 'cond' 'qufunct' Ident '(' ListArgDef ')' Body   (130)
	Def -> 'extern' 'operator' Ident '(' ListArgDef ')' ';'   (131)
	Def -> 'extern' 'qufunct' Ident '(' ListArgDef ')' ';'   (132)
	Def -> 'extern' 'cond' 'operator' Ident '(' ListArgDef ')' ';'   (133)
	Def -> 'extern' 'cond' 'qufunct' Ident '(' ListArgDef ')' ';'   (134)
	Block -> '{' ListStmt '}'                          (135)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'#'            { PT _ (TS _ 3) }
	'&'            { PT _ (TS _ 4) }
	'('            { PT _ (TS _ 5) }
	')'            { PT _ (TS _ 6) }
	'*'            { PT _ (TS _ 7) }
	'+'            { PT _ (TS _ 8) }
	','            { PT _ (TS _ 9) }
	'-'            { PT _ (TS _ 10) }
	'->'           { PT _ (TS _ 11) }
	'..'           { PT _ (TS _ 12) }
	'/'            { PT _ (TS _ 13) }
	':'            { PT _ (TS _ 14) }
	'::'           { PT _ (TS _ 15) }
	';'            { PT _ (TS _ 16) }
	'<'            { PT _ (TS _ 17) }
	'<-'           { PT _ (TS _ 18) }
	'<->'          { PT _ (TS _ 19) }
	'<='           { PT _ (TS _ 20) }
	'='            { PT _ (TS _ 21) }
	'=='           { PT _ (TS _ 22) }
	'>'            { PT _ (TS _ 23) }
	'>='           { PT _ (TS _ 24) }
	'['            { PT _ (TS _ 25) }
	'\\'           { PT _ (TS _ 26) }
	']'            { PT _ (TS _ 27) }
	'^'            { PT _ (TS _ 28) }
	'and'          { PT _ (TS _ 29) }
	'boolean'      { PT _ (TS _ 30) }
	'complex'      { PT _ (TS _ 31) }
	'cond'         { PT _ (TS _ 32) }
	'const'        { PT _ (TS _ 33) }
	'dump'         { PT _ (TS _ 34) }
	'else'         { PT _ (TS _ 35) }
	'exit'         { PT _ (TS _ 36) }
	'extern'       { PT _ (TS _ 37) }
	'false'        { PT _ (TS _ 38) }
	'for'          { PT _ (TS _ 39) }
	'if'           { PT _ (TS _ 40) }
	'input'        { PT _ (TS _ 41) }
	'int'          { PT _ (TS _ 42) }
	'list'         { PT _ (TS _ 43) }
	'load'         { PT _ (TS _ 44) }
	'matrix'       { PT _ (TS _ 45) }
	'measure'      { PT _ (TS _ 46) }
	'mod'          { PT _ (TS _ 47) }
	'not'          { PT _ (TS _ 48) }
	'operator'     { PT _ (TS _ 49) }
	'or'           { PT _ (TS _ 50) }
	'print'        { PT _ (TS _ 51) }
	'procedure'    { PT _ (TS _ 52) }
	'qucond'       { PT _ (TS _ 53) }
	'quconst'      { PT _ (TS _ 54) }
	'qufunct'      { PT _ (TS _ 55) }
	'qureg'        { PT _ (TS _ 56) }
	'quscratch'    { PT _ (TS _ 57) }
	'quvoid'       { PT _ (TS _ 58) }
	'real'         { PT _ (TS _ 59) }
	'reset'        { PT _ (TS _ 60) }
	'return'       { PT _ (TS _ 61) }
	'save'         { PT _ (TS _ 62) }
	'set'          { PT _ (TS _ 63) }
	'shell'        { PT _ (TS _ 64) }
	'step'         { PT _ (TS _ 65) }
	'string'       { PT _ (TS _ 66) }
	'tensor'       { PT _ (TS _ 67) }
	'to'           { PT _ (TS _ 68) }
	'true'         { PT _ (TS _ 69) }
	'until'        { PT _ (TS _ 70) }
	'vector'       { PT _ (TS _ 71) }
	'while'        { PT _ (TS _ 72) }
	'xor'          { PT _ (TS _ 73) }
	'{'            { PT _ (TS _ 74) }
	'}'            { PT _ (TS _ 75) }
	L_ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_doubl        { PT _ (TD $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	Double          rule  3
	String          rule  4
	Program         rule  5
	ListIdent       rules 6, 7, 8
	ComplexCoord    rules 9, 10
	Const           rules 11, 12, 13, 14, 15
	ListExpr        rules 16, 17, 18
	Expr11          rules 19, 20, 21, 22, 23, 24, 25, 26, 27
	Expr            rules 28, 29, 30
	Expr1           rules 31, 32, 33, 34, 35
	Expr2           rules 36, 37
	Expr3           rules 38, 39
	Expr4           rules 40, 41
	Expr5           rules 42, 43
	Expr6           rules 44, 45, 46, 47
	Expr7           rules 48, 49, 50, 51
	Expr8           rules 52, 53
	Expr9           rules 54, 55
	Expr10          rules 56, 57
	Option          rule  58
	ListStmt        rules 59, 60
	Stmt            rules 61, 62, 63, 64, 65, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 78, 79, 80, 81, 82, 83, 84, 85, 86, 87, 88
	FanoutSugarOp   rules 89, 90, 91
	Type            rules 92, 93, 94, 95, 96
	ST              rules 97, 98, 99, 100, 101, 102, 103, 104, 105
	ConstDef        rules 106, 107
	VarDef          rules 108, 109, 110
	ListArgDef      rules 111, 112, 113
	ArgDef          rule  114
	ListConstOrVar  rules 115, 116
	ConstOrVar      rules 117, 118
	Body            rule  119
	ListDef         rules 120, 121
	Def             rules 122, 123, 124, 125, 126, 127, 128, 129, 130, 131, 132, 133, 134
	Block           rule  135

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0


	'!'            reduce using rule 120
	'#'            reduce using rule 120
	'('            reduce using rule 120
	'-'            reduce using rule 120
	';'            reduce using rule 120
	'boolean'      reduce using rule 120
	'complex'      reduce using rule 120
	'cond'         reduce using rule 120
	'const'        reduce using rule 120
	'dump'         reduce using rule 120
	'exit'         reduce using rule 120
	'extern'       reduce using rule 120
	'false'        reduce using rule 120
	'for'          reduce using rule 120
	'if'           reduce using rule 120
	'input'        reduce using rule 120
	'int'          reduce using rule 120
	'list'         reduce using rule 120
	'load'         reduce using rule 120
	'measure'      reduce using rule 120
	'not'          reduce using rule 120
	'operator'     reduce using rule 120
	'print'        reduce using rule 120
	'procedure'    reduce using rule 120
	'qucond'       reduce using rule 120
	'quconst'      reduce using rule 120
	'qufunct'      reduce using rule 120
	'qureg'        reduce using rule 120
	'quscratch'    reduce using rule 120
	'quvoid'       reduce using rule 120
	'real'         reduce using rule 120
	'reset'        reduce using rule 120
	'return'       reduce using rule 120
	'save'         reduce using rule 120
	'set'          reduce using rule 120
	'shell'        reduce using rule 120
	'true'         reduce using rule 120
	'while'        reduce using rule 120
	'{'            reduce using rule 120
	L_ident        reduce using rule 120
	L_integ        reduce using rule 120
	L_doubl        reduce using rule 120
	L_quoted       reduce using rule 120
	%eof           reduce using rule 120

	Program        goto state 3
	ListDef        goto state 4

State 1


	L_ident        shift, and enter state 2


State 2

	Ident -> L_ident .                                  (rule 1)

	'!='           reduce using rule 1
	'#'            reduce using rule 1
	'&'            reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'->'           reduce using rule 1
	'..'           reduce using rule 1
	'/'            reduce using rule 1
	':'            reduce using rule 1
	'::'           reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<-'           reduce using rule 1
	'<->'          reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	'\\'           reduce using rule 1
	']'            reduce using rule 1
	'^'            reduce using rule 1
	'and'          reduce using rule 1
	'false'        reduce using rule 1
	'mod'          reduce using rule 1
	'not'          reduce using rule 1
	'or'           reduce using rule 1
	'step'         reduce using rule 1
	'to'           reduce using rule 1
	'true'         reduce using rule 1
	'xor'          reduce using rule 1
	'{'            reduce using rule 1
	L_ident        reduce using rule 1
	L_integ        reduce using rule 1
	L_doubl        reduce using rule 1
	L_quoted       reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	Program -> ListDef . ListStmt                       (rule 5)
	ListDef -> ListDef . Def                            (rule 121)

	'!'            reduce using rule 59
	'#'            reduce using rule 59
	'('            reduce using rule 59
	'-'            reduce using rule 59
	';'            reduce using rule 59
	'boolean'      shift, and enter state 11
	'complex'      shift, and enter state 12
	'cond'         shift, and enter state 13
	'const'        shift, and enter state 14
	'dump'         reduce using rule 59
	'exit'         reduce using rule 59
	'extern'       shift, and enter state 15
	'false'        reduce using rule 59
	'for'          reduce using rule 59
	'if'           reduce using rule 59
	'input'        reduce using rule 59
	'int'          shift, and enter state 16
	'list'         reduce using rule 59
	'load'         reduce using rule 59
	'measure'      reduce using rule 59
	'not'          reduce using rule 59
	'operator'     shift, and enter state 17
	'print'        reduce using rule 59
	'procedure'    shift, and enter state 18
	'qucond'       shift, and enter state 19
	'quconst'      shift, and enter state 20
	'qufunct'      shift, and enter state 21
	'qureg'        shift, and enter state 22
	'quscratch'    shift, and enter state 23
	'quvoid'       shift, and enter state 24
	'real'         shift, and enter state 25
	'reset'        reduce using rule 59
	'return'       reduce using rule 59
	'save'         reduce using rule 59
	'set'          reduce using rule 59
	'shell'        reduce using rule 59
	'true'         reduce using rule 59
	'while'        reduce using rule 59
	'{'            reduce using rule 59
	L_ident        reduce using rule 59
	L_integ        reduce using rule 59
	L_doubl        reduce using rule 59
	L_quoted       reduce using rule 59
	%eof           reduce using rule 59

	ListStmt       goto state 5
	Type           goto state 6
	ST             goto state 7
	ConstDef       goto state 8
	VarDef         goto state 9
	Def            goto state 10

State 5

	Program -> ListDef ListStmt .                       (rule 5)
	ListStmt -> ListStmt . Stmt                         (rule 60)

	'!'            shift, and enter state 63
	'#'            shift, and enter state 64
	'('            shift, and enter state 65
	'-'            shift, and enter state 66
	';'            shift, and enter state 67
	'dump'         shift, and enter state 68
	'exit'         shift, and enter state 69
	'false'        shift, and enter state 70
	'for'          shift, and enter state 71
	'if'           shift, and enter state 72
	'input'        shift, and enter state 73
	'list'         shift, and enter state 74
	'load'         shift, and enter state 75
	'measure'      shift, and enter state 76
	'not'          shift, and enter state 77
	'print'        shift, and enter state 78
	'reset'        shift, and enter state 79
	'return'       shift, and enter state 80
	'save'         shift, and enter state 81
	'set'          shift, and enter state 82
	'shell'        shift, and enter state 83
	'true'         shift, and enter state 84
	'while'        shift, and enter state 85
	'{'            shift, and enter state 86
	L_ident        shift, and enter state 2
	L_integ        shift, and enter state 87
	L_doubl        shift, and enter state 88
	L_quoted       shift, and enter state 89
	%eof           reduce using rule 5

	Ident          goto state 43
	Integer        goto state 44
	Double         goto state 45
	String         goto state 46
	ComplexCoord   goto state 47
	Const          goto state 48
	Expr11         goto state 49
	Expr           goto state 50
	Expr1          goto state 51
	Expr2          goto state 52
	Expr3          goto state 53
	Expr4          goto state 54
	Expr5          goto state 55
	Expr6          goto state 56
	Expr7          goto state 57
	Expr8          goto state 58
	Expr9          goto state 59
	Expr10         goto state 60
	Stmt           goto state 61
	Block          goto state 62

State 6

	ConstDef -> Type . Ident '=' 'cond'                 (rule 107)
	VarDef -> Type . Ident                              (rule 108)
	VarDef -> Type . Ident '=' Expr                     (rule 109)
	VarDef -> Type . Ident '[' Expr ']'                 (rule 110)
	Def -> Type . Ident '(' ListArgDef ')' Body         (rule 124)

	L_ident        shift, and enter state 2

	Ident          goto state 42

State 7

	Type -> ST .                                        (rule 92)
	Type -> ST . 'string'                               (rule 93)
	Type -> ST . 'vector'                               (rule 94)
	Type -> ST . 'matrix'                               (rule 95)
	Type -> ST . 'tensor' Integer                       (rule 96)

	'matrix'       shift, and enter state 38
	'string'       shift, and enter state 39
	'tensor'       shift, and enter state 40
	'vector'       shift, and enter state 41
	L_ident        reduce using rule 92


State 8

	Def -> ConstDef . ';'                               (rule 122)

	';'            shift, and enter state 37


State 9

	Def -> VarDef . ';'                                 (rule 123)

	';'            shift, and enter state 36


State 10

	ListDef -> ListDef Def .                            (rule 121)

	'!'            reduce using rule 121
	'#'            reduce using rule 121
	'('            reduce using rule 121
	'-'            reduce using rule 121
	';'            reduce using rule 121
	'boolean'      reduce using rule 121
	'complex'      reduce using rule 121
	'cond'         reduce using rule 121
	'const'        reduce using rule 121
	'dump'         reduce using rule 121
	'exit'         reduce using rule 121
	'extern'       reduce using rule 121
	'false'        reduce using rule 121
	'for'          reduce using rule 121
	'if'           reduce using rule 121
	'input'        reduce using rule 121
	'int'          reduce using rule 121
	'list'         reduce using rule 121
	'load'         reduce using rule 121
	'measure'      reduce using rule 121
	'not'          reduce using rule 121
	'operator'     reduce using rule 121
	'print'        reduce using rule 121
	'procedure'    reduce using rule 121
	'qucond'       reduce using rule 121
	'quconst'      reduce using rule 121
	'qufunct'      reduce using rule 121
	'qureg'        reduce using rule 121
	'quscratch'    reduce using rule 121
	'quvoid'       reduce using rule 121
	'real'         reduce using rule 121
	'reset'        reduce using rule 121
	'return'       reduce using rule 121
	'save'         reduce using rule 121
	'set'          reduce using rule 121
	'shell'        reduce using rule 121
	'true'         reduce using rule 121
	'while'        reduce using rule 121
	'{'            reduce using rule 121
	L_ident        reduce using rule 121
	L_integ        reduce using rule 121
	L_doubl        reduce using rule 121
	L_quoted       reduce using rule 121
	%eof           reduce using rule 121


State 11

	ST -> 'boolean' .                                   (rule 97)

	'matrix'       reduce using rule 97
	'string'       reduce using rule 97
	'tensor'       reduce using rule 97
	'vector'       reduce using rule 97
	L_ident        reduce using rule 97


State 12

	ST -> 'complex' .                                   (rule 100)

	'matrix'       reduce using rule 100
	'string'       reduce using rule 100
	'tensor'       reduce using rule 100
	'vector'       reduce using rule 100
	L_ident        reduce using rule 100


State 13

	Def -> 'cond' . 'operator' Ident '(' ListArgDef ')' Body    (rule 128)
	Def -> 'cond' . 'qufunct' Ident '(' ListArgDef ')' Body    (rule 130)

	'operator'     shift, and enter state 34
	'qufunct'      shift, and enter state 35


State 14

	ConstDef -> 'const' . Ident '=' Expr                (rule 106)

	L_ident        shift, and enter state 2

	Ident          goto state 33

State 15

	Def -> 'extern' . 'operator' Ident '(' ListArgDef ')' ';'    (rule 131)
	Def -> 'extern' . 'qufunct' Ident '(' ListArgDef ')' ';'    (rule 132)
	Def -> 'extern' . 'cond' 'operator' Ident '(' ListArgDef ')' ';'    (rule 133)
	Def -> 'extern' . 'cond' 'qufunct' Ident '(' ListArgDef ')' ';'    (rule 134)

	'cond'         shift, and enter state 30
	'operator'     shift, and enter state 31
	'qufunct'      shift, and enter state 32


State 16

	ST -> 'int' .                                       (rule 98)

	'matrix'       reduce using rule 98
	'string'       reduce using rule 98
	'tensor'       reduce using rule 98
	'vector'       reduce using rule 98
	L_ident        reduce using rule 98


State 17

	Def -> 'operator' . Ident '(' ListArgDef ')' Body    (rule 126)

	L_ident        shift, and enter state 2

	Ident          goto state 29

State 18

	Def -> 'procedure' . Ident '(' ListArgDef ')' Body    (rule 125)

	L_ident        shift, and enter state 2

	Ident          goto state 28

State 19

	ST -> 'qucond' .                                    (rule 105)

	'matrix'       reduce using rule 105
	'string'       reduce using rule 105
	'tensor'       reduce using rule 105
	'vector'       reduce using rule 105
	L_ident        reduce using rule 105


State 20

	ST -> 'quconst' .                                   (rule 103)

	'matrix'       reduce using rule 103
	'string'       reduce using rule 103
	'tensor'       reduce using rule 103
	'vector'       reduce using rule 103
	L_ident        reduce using rule 103


State 21

	Def -> 'qufunct' . 'operator' Ident '(' ListArgDef ')' Body    (rule 127)
	Def -> 'qufunct' . Ident '(' ListArgDef ')' Body    (rule 129)

	'operator'     shift, and enter state 27
	L_ident        shift, and enter state 2

	Ident          goto state 26

State 22

	ST -> 'qureg' .                                     (rule 101)

	'matrix'       reduce using rule 101
	'string'       reduce using rule 101
	'tensor'       reduce using rule 101
	'vector'       reduce using rule 101
	L_ident        reduce using rule 101


State 23

	ST -> 'quscratch' .                                 (rule 104)

	'matrix'       reduce using rule 104
	'string'       reduce using rule 104
	'tensor'       reduce using rule 104
	'vector'       reduce using rule 104
	L_ident        reduce using rule 104


State 24

	ST -> 'quvoid' .                                    (rule 102)

	'matrix'       reduce using rule 102
	'string'       reduce using rule 102
	'tensor'       reduce using rule 102
	'vector'       reduce using rule 102
	L_ident        reduce using rule 102


State 25

	ST -> 'real' .                                      (rule 99)

	'matrix'       reduce using rule 99
	'string'       reduce using rule 99
	'tensor'       reduce using rule 99
	'vector'       reduce using rule 99
	L_ident        reduce using rule 99


State 26

	Def -> 'qufunct' Ident . '(' ListArgDef ')' Body    (rule 129)

	'('            shift, and enter state 158


State 27

	Def -> 'qufunct' 'operator' . Ident '(' ListArgDef ')' Body    (rule 127)

	L_ident        shift, and enter state 2

	Ident          goto state 157

State 28

	Def -> 'procedure' Ident . '(' ListArgDef ')' Body    (rule 125)

	'('            shift, and enter state 156


State 29

	Def -> 'operator' Ident . '(' ListArgDef ')' Body    (rule 126)

	'('            shift, and enter state 155


State 30

	Def -> 'extern' 'cond' . 'operator' Ident '(' ListArgDef ')' ';'    (rule 133)
	Def -> 'extern' 'cond' . 'qufunct' Ident '(' ListArgDef ')' ';'    (rule 134)

	'operator'     shift, and enter state 153
	'qufunct'      shift, and enter state 154


State 31

	Def -> 'extern' 'operator' . Ident '(' ListArgDef ')' ';'    (rule 131)

	L_ident        shift, and enter state 2

	Ident          goto state 152

State 32

	Def -> 'extern' 'qufunct' . Ident '(' ListArgDef ')' ';'    (rule 132)

	L_ident        shift, and enter state 2

	Ident          goto state 151

State 33

	ConstDef -> 'const' Ident . '=' Expr                (rule 106)

	'='            shift, and enter state 150


State 34

	Def -> 'cond' 'operator' . Ident '(' ListArgDef ')' Body    (rule 128)

	L_ident        shift, and enter state 2

	Ident          goto state 149

State 35

	Def -> 'cond' 'qufunct' . Ident '(' ListArgDef ')' Body    (rule 130)

	L_ident        shift, and enter state 2

	Ident          goto state 148

State 36

	Def -> VarDef ';' .                                 (rule 123)

	'!'            reduce using rule 123
	'#'            reduce using rule 123
	'('            reduce using rule 123
	'-'            reduce using rule 123
	';'            reduce using rule 123
	'boolean'      reduce using rule 123
	'complex'      reduce using rule 123
	'cond'         reduce using rule 123
	'const'        reduce using rule 123
	'dump'         reduce using rule 123
	'exit'         reduce using rule 123
	'extern'       reduce using rule 123
	'false'        reduce using rule 123
	'for'          reduce using rule 123
	'if'           reduce using rule 123
	'input'        reduce using rule 123
	'int'          reduce using rule 123
	'list'         reduce using rule 123
	'load'         reduce using rule 123
	'measure'      reduce using rule 123
	'not'          reduce using rule 123
	'operator'     reduce using rule 123
	'print'        reduce using rule 123
	'procedure'    reduce using rule 123
	'qucond'       reduce using rule 123
	'quconst'      reduce using rule 123
	'qufunct'      reduce using rule 123
	'qureg'        reduce using rule 123
	'quscratch'    reduce using rule 123
	'quvoid'       reduce using rule 123
	'real'         reduce using rule 123
	'reset'        reduce using rule 123
	'return'       reduce using rule 123
	'save'         reduce using rule 123
	'set'          reduce using rule 123
	'shell'        reduce using rule 123
	'true'         reduce using rule 123
	'while'        reduce using rule 123
	'{'            reduce using rule 123
	L_ident        reduce using rule 123
	L_integ        reduce using rule 123
	L_doubl        reduce using rule 123
	L_quoted       reduce using rule 123
	%eof           reduce using rule 123


State 37

	Def -> ConstDef ';' .                               (rule 122)

	'!'            reduce using rule 122
	'#'            reduce using rule 122
	'('            reduce using rule 122
	'-'            reduce using rule 122
	';'            reduce using rule 122
	'boolean'      reduce using rule 122
	'complex'      reduce using rule 122
	'cond'         reduce using rule 122
	'const'        reduce using rule 122
	'dump'         reduce using rule 122
	'exit'         reduce using rule 122
	'extern'       reduce using rule 122
	'false'        reduce using rule 122
	'for'          reduce using rule 122
	'if'           reduce using rule 122
	'input'        reduce using rule 122
	'int'          reduce using rule 122
	'list'         reduce using rule 122
	'load'         reduce using rule 122
	'measure'      reduce using rule 122
	'not'          reduce using rule 122
	'operator'     reduce using rule 122
	'print'        reduce using rule 122
	'procedure'    reduce using rule 122
	'qucond'       reduce using rule 122
	'quconst'      reduce using rule 122
	'qufunct'      reduce using rule 122
	'qureg'        reduce using rule 122
	'quscratch'    reduce using rule 122
	'quvoid'       reduce using rule 122
	'real'         reduce using rule 122
	'reset'        reduce using rule 122
	'return'       reduce using rule 122
	'save'         reduce using rule 122
	'set'          reduce using rule 122
	'shell'        reduce using rule 122
	'true'         reduce using rule 122
	'while'        reduce using rule 122
	'{'            reduce using rule 122
	L_ident        reduce using rule 122
	L_integ        reduce using rule 122
	L_doubl        reduce using rule 122
	L_quoted       reduce using rule 122
	%eof           reduce using rule 122


State 38

	Type -> ST 'matrix' .                               (rule 95)

	L_ident        reduce using rule 95


State 39

	Type -> ST 'string' .                               (rule 93)

	L_ident        reduce using rule 93


State 40

	Type -> ST 'tensor' . Integer                       (rule 96)

	L_integ        shift, and enter state 87

	Integer        goto state 147

State 41

	Type -> ST 'vector' .                               (rule 94)

	L_ident        reduce using rule 94


State 42

	ConstDef -> Type Ident . '=' 'cond'                 (rule 107)
	VarDef -> Type Ident .                              (rule 108)
	VarDef -> Type Ident . '=' Expr                     (rule 109)
	VarDef -> Type Ident . '[' Expr ']'                 (rule 110)
	Def -> Type Ident . '(' ListArgDef ')' Body         (rule 124)

	'('            shift, and enter state 144
	';'            reduce using rule 108
	'='            shift, and enter state 145
	'['            shift, and enter state 146


State 43

	Expr11 -> Ident .                                   (rule 19)
	Expr11 -> Ident . '(' ListExpr ')'                  (rule 20)
	Expr11 -> Ident . '[' ListExpr ']'                  (rule 21)
	Expr11 -> Ident . '[' Expr ':' Expr ']'             (rule 22)
	Expr11 -> Ident . '[' Expr '::' Expr ']'            (rule 23)
	Expr11 -> Ident . '[' Expr '..' Expr ']'            (rule 24)
	Expr11 -> Ident . '[' Expr '\\' Expr ']'            (rule 25)

	'!='           reduce using rule 19
	'&'            reduce using rule 19
	'('            shift, and enter state 142
	')'            reduce using rule 19
	'*'            reduce using rule 19
	'+'            reduce using rule 19
	','            reduce using rule 19
	'-'            reduce using rule 19
	'->'           reduce using rule 19
	'..'           reduce using rule 19
	'/'            reduce using rule 19
	':'            reduce using rule 19
	'::'           reduce using rule 19
	';'            reduce using rule 19
	'<'            reduce using rule 19
	'<-'           reduce using rule 19
	'<->'          reduce using rule 19
	'<='           reduce using rule 19
	'='            reduce using rule 19
	'=='           reduce using rule 19
	'>'            reduce using rule 19
	'>='           reduce using rule 19
	'['            shift, and enter state 143
	'\\'           reduce using rule 19
	']'            reduce using rule 19
	'^'            reduce using rule 19
	'and'          reduce using rule 19
	'mod'          reduce using rule 19
	'or'           reduce using rule 19
	'step'         reduce using rule 19
	'to'           reduce using rule 19
	'xor'          reduce using rule 19
	'{'            reduce using rule 19
	L_ident        reduce using rule 19


State 44

	ComplexCoord -> Integer .                           (rule 9)

	'!='           reduce using rule 9
	'&'            reduce using rule 9
	')'            reduce using rule 9
	'*'            reduce using rule 9
	'+'            reduce using rule 9
	','            reduce using rule 9
	'-'            reduce using rule 9
	'->'           reduce using rule 9
	'..'           reduce using rule 9
	'/'            reduce using rule 9
	':'            reduce using rule 9
	'::'           reduce using rule 9
	';'            reduce using rule 9
	'<'            reduce using rule 9
	'<-'           reduce using rule 9
	'<->'          reduce using rule 9
	'<='           reduce using rule 9
	'='            reduce using rule 9
	'=='           reduce using rule 9
	'>'            reduce using rule 9
	'>='           reduce using rule 9
	'\\'           reduce using rule 9
	']'            reduce using rule 9
	'^'            reduce using rule 9
	'and'          reduce using rule 9
	'mod'          reduce using rule 9
	'or'           reduce using rule 9
	'step'         reduce using rule 9
	'to'           reduce using rule 9
	'xor'          reduce using rule 9
	'{'            reduce using rule 9
	L_ident        reduce using rule 9


State 45

	ComplexCoord -> Double .                            (rule 10)
